--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,10 @@
-.App {
-	margin: 1rem;
-	font-family: Arial, Helvetica, sans-serif;
+body { 
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.Split {
-	display: flex;
-}
-   
-.gutter {
-	background-repeat: no-repeat;
-	background-position: 50%;
-}
-   
-.gutter.gutter-horizontal {
-	background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==');
-	cursor: col-resize;
-}
-   
-.gutter.gutter-vertical {
-	background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAFAQMAAABo7865AAAABlBMVEVHcEzMzMzyAv2sAAAAAXRSTlMAQObYZgAAABBJREFUeF5jOAMEEAIEEFwAn3kMwcB6I2AAAAAASUVORK5CYII=');
-	cursor: row-resize;
-}
-   
-.my-box {
-	background: violet;
-	height: 100px;
+.content-section-margins {
+  margin-left: 40px;
+  margin-right: 40px;
+  margin-top: 40px;
 }
